fix: save sync file name button on mobile

--- a/app-src/scripts/routes/settings/_settings-c.scss
+++ b/app-src/scripts/routes/settings/_settings-c.scss
@@ -47,12 +47,14 @@
 
     .md-button,
     button {
-      width: 100%;
-      max-width: 100%;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      margin-left: 0;
-      margin-right: 0;
+      &:not(.md-icon-button) {
+        width: 100%;
+        max-width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        margin-left: 0;
+        margin-right: 0;
+      }
     }
   }
 }
